[tool.poetry]
name = "podder-task-cli"
version = "0.1.2"
description = ""
authors = ["Takaaki Mizuno <takaaki.mizuno@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
flake8 = "^3.8.4"
toml = "^0.10.2"
rich = "^9.3.0"
PyInquirer = "^1.0.3"
Jinja2 = "^2.11.2"
importlib-metadata = {version = "^1.6.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.30.0"
isort = "^5.6.1"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
podder = 'podder_task_cli.cli:main'
