[tool.poetry]
name = "podder-task-cli"
version = "0.2.10"
description = ""
authors = ["Takaaki Mizuno <takaaki.mizuno@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
flake8 = "^3.9.2"
toml = "^0.10.2"
rich = "^9.3.0"
PyInquirer = "^1.0.3"
importlib-metadata = {version = "^1.6.0", python = "<3.8"}
requests = "^2.26.0"
tqdm = "^4.62.3"
packaging = "^20.9.0"
PyYAML = "^6.0"
boto3 = "^1.21.22"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.30.0"
isort = "^5.9.2"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
podder = 'podder_task_cli.cli:main'
